--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -4,7 +4,8 @@
     {
       "files": ["*.ts", "*.tsx"],
       "rules": {
-        "react-hooks/exhaustive-deps": 0
+        "react-hooks/exhaustive-deps": 0,
+        "react/display-name": "off"
       }
     }
   ]
