--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -56,6 +56,7 @@
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "28.1.1",
+    "msw": "^1.2.2",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "sass": "^1.61.0",
