--- a/.github/workflows/ServerTest-CI.yml
+++ b/.github/workflows/ServerTest-CI.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
-          POSTGRES_DB: postgres
+          POSTGRES_DB: testing
 
         options: >-
           --health-cmd pg_isready
