--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -80,6 +80,7 @@
     "react-test-renderer": "18.2.0",
     "sass": "^1.61.0",
     "sass-loader": "^13.2.2",
-    "storybook": "7.0.2"
+    "storybook": "7.0.2",
+    "storybook-addon-next": "^1.8.0"
   }
 }
