--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,7 +34,7 @@
     "@tiptap/react": "^2.0.4",
     "@tiptap/starter-kit": "^2.0.4",
     "@types/node": "18.15.11",
-    "@types/react": "18.0.33",
+    "@types/react": "^18.2.20",
     "@types/react-dom": "18.0.11",
     "dayjs": "^1.11.9",
     "embla-carousel-react": "^8.0.0-rc11",
@@ -42,13 +42,13 @@
     "eslint-config-next": "13.3.0",
     "jest-environment-jsdom": "^29.5.0",
     "next": "13.3.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-test-renderer": "^18.2.0",
-    "typescript": "5.0.4",
+    "typescript": "^5.1.6",
     "yup": "^1.1.1"
   },
   "devDependencies": {
