--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "",
   "scripts": {
-    "build": "nest build",
+    "build": "cross-env NODE_ENV=dev nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=dev nest start",
     "dev": "cross-env NODE_ENV=dev nest start --watch",
