--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-test-renderer": "^18.2.0",
+    "storybook-react-context": "^0.6.0",
     "typescript": "^5.1.6",
     "yup": "^1.1.1"
   },
